feat: Implement Playlist Detail View
This commit introduces the playlist detail view, which displays information about a specific playlist, including its title, description, cover image, and a list of songs.

Key changes:
- Created `PlaylistDetailView.kt` to define the composable for the playlist detail screen.
- Created `PlaylistDetailViewModel.kt` to manage the data and logic for the playlist detail view.
- Added a `SongCard.kt` composable to display individual songs within the playlist.
- Updated the `Song.kt` data model to include `artist`, `album`, and `duration` fields.
- Included a button in `PlaylistView` for navigating to the detail view.
- Added `androidx.navigation:navigation-testing-android` dependency for testing navigation.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ composeBom = "2025.05.01"
 media3Exoplayer = "1.7.1"
 navigationCompose = "2.9.0"
 material3 = "1.4.0-alpha15"
+navigationTestingAndroid = "2.9.0"
 
 
 [libraries]
@@ -49,6 +50,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+androidx-navigation-testing-android = { group = "androidx.navigation", name = "navigation-testing-android", version.ref = "navigationTestingAndroid" }
 
 
 [plugins]
