--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,11 @@
         <service
             android:name="de.hsb.vibeify.services.MediaService"
             android:foregroundServiceType="mediaPlayback"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="androidx.media3.session.MediaSessionService"/>
+                <action android:name="android.media.browse.MediaBrowserService"/>
+            </intent-filter>
         </service>
     </application>
 
