feat: Implement basic Vibeify widget
This commit introduces a basic home screen widget for Vibeify.

Key changes:
- Added `VibeifyWidget.kt` implementing `GlanceAppWidget` to define the widget's content and behavior.
- Added `VibeifyWidgetReceiver.kt` extending `GlanceAppWidgetReceiver` to handle widget updates.
- The widget displays the current song title, artist, a placeholder album art, and playback controls (previous, play/pause, next).
- Clicking the widget opens the `MainActivity`.
- Added `PlayerServiceEntryPoint` to allow the widget to access `PlayerServiceV2` for playback information and control.
- Updated `AndroidManifest.xml` to declare the widget receiver and provider.
- Added `vibeify_appwidget_provider.xml` to define widget metadata.
- Included necessary Glance dependencies in `build.gradle.kts` and `libs.versions.toml`.
- Added widget-specific colors to `colors.xml`.
- Updated `composeOptions` in `app/build.gradle.kts`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".VibeifyApplication"
@@ -36,16 +37,30 @@
             android:exported="true"
             android:permission="android.permission.BIND_MEDIA_SESSION_SERVICE">
             <intent-filter>
-                <action android:name="androidx.media3.session.MediaSessionService"/>
-                <action android:name="android.media.browse.MediaBrowserService"/>
+                <action android:name="androidx.media3.session.MediaSessionService" />
+                <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
         </service>
-        <receiver android:name="androidx.media3.session.MediaButtonReceiver"
+
+        <receiver
+            android:name="androidx.media3.session.MediaButtonReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+
+        <receiver
+            android:name=".widget.VibeifyWidgetReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/vibeify_appwidget_provider" />
+        </receiver>
+
     </application>
 
 </manifest>
